fix size of header logo to reduce cumulative layout shift (CLS)

--- a/themes/geeky/assets/scss/_reflectoring.scss
+++ b/themes/geeky/assets/scss/_reflectoring.scss
@@ -170,6 +170,7 @@ h1, h2, h3, h4, h5, h6, .btn, .navbar {
 
 header {
   .logo {
-    max-width: 100px;
+    width: 100px;
+    height: 100px;
   }
 }
